// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emoji test should render inline emojis correctly 1`] = `
Array [
  .emotion-0 img {
  height: 1em;
  width: 1em;
  margin: 0 0.05em 0 0.1em;
  vertical-align: -0.1em;
}

<span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Hello <img class=\\"emoji\\" draggable=\\"false\\" alt=\\"🐢\\" src=\\"https://twemoji.maxcdn.com/v/13.0.1/svg/1f422.svg\\"/>.",
      }
    }
  />,
  <span>
    Do
    <span>
      you
      <span>
        even
        <span>
          nest
          <span>
            🐢
            <span>
              ?
            </span>
          </span>
        </span>
      </span>
    </span>
  </span>,
]
`;

exports[`emoji test should render standalone emojis correctly 1`] = `
.emotion-0 img {
  height: 1em;
  width: 1em;
  margin: 0 0.05em 0 0.1em;
  vertical-align: -0.1em;
}

<span
  className="emotion-0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<img class=\\"emoji\\" draggable=\\"false\\" alt=\\"🐢\\" src=\\"https://twemoji.maxcdn.com/v/13.0.1/svg/1f422.svg\\"/>",
    }
  }
/>
`;
